--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Yaldevi:wght@200&display=swap');
 body{
     text-align: center;
+    font-family: 'Yaldevi', sans-serif;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 label{
     display: block;
     padding: 1rem;
+    font-weight:bold;
+}
+
+input{
+    margin-left: 1rem;
+}
+
+.price{
+   margin-left: 2.9rem;
+}
+.card{
+    padding: 1rem;
+    background-color:#D1D5DB;
+    max-width: 450px;
+    box-shadow: 10px 10px 5px -4px rgba(97,80,80,0.75);
+
+}
+
+#output{
+    margin-top: 2rem;
+    font-weight: bold;
 }
