--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ label{
 
 input{
     margin-left: 1rem;
+    padding: 0.2rem 0.2rem;
 }
 
 .price{
@@ -22,7 +23,7 @@ input{
 }
 .card{
     padding: 1rem;
-    background-color:#D1D5DB;
+    background-color: #FDE68A;
     max-width: 450px;
     box-shadow: 10px 10px 5px -4px rgba(97,80,80,0.75);
 
@@ -31,4 +32,16 @@ input{
 #output{
     margin-top: 2rem;
     font-weight: bold;
+}
+
+button{
+    border: 3px solid whitesmoke;
+    border-radius: 0.4rem;
+    padding: 0.3rem 0.5rem;
+    background-color: aliceblue;
+    
+}
+
+button:hover{
+    background-color: #FDE68A;
 }
